# anderbot

./: .env.example  .gitignore  README.md  README2.md  docs-plugin.md  group_manager.py  pyproject.toml
config/: plugins.json  runtime.json
deploy/: run-linux.sh  run-windows.bat  setup-linux.sh  setup-windows.ps1
docs/: INTEGRATIONS.md  ROADMAP.md
src/anderbot/: bot.py  config.py  main.py
src/anderbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/anderbot/adapters/: napcat.py
src/anderbot/core/: event_bus.py  models.py  plugin_base.py  plugin_manager.py  session.py  store.py
src/anderbot/integrations/: __init__.py  service.py
src/anderbot/plugins/: admin.py  ai_chat.py  echo.py  help.py
src/anderbot/web/: app.py  console.html  console.py
