[project]
name = "anderbot"
version = "0.1.0"
description = "Open ecosystem QQ bot powered by NapCat WebSocket and Python plugins"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=13.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "orjson>=3.10.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9"
]

[project.scripts]
anderbot = "anderbot.main:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anderbot = ["web/*.html"]
